# hex-arch

./: Cargo.toml  README.md  expand  expand-repository-traits
accessors/: Cargo.toml
accessors/src/: lib.rs
cache/: Cargo.toml
cache/proc-macros/: Cargo.toml
cache/proc-macros/src/: lib.rs
cache/src/: lib.rs
common/: Cargo.toml
common/src/: lib.rs
data-sources/: Cargo.toml
data-sources/backends/: Cargo.toml
data-sources/backends/diesel/: Cargo.toml
data-sources/backends/diesel/audit/: Cargo.toml
data-sources/backends/diesel/audit/proc-macros/: Cargo.toml
data-sources/backends/diesel/audit/proc-macros/src/: lib.rs
data-sources/backends/diesel/audit/src/: lib.rs
data-sources/backends/diesel/src/: lib.rs
data-sources/backends/src/: lib.rs
data-sources/core/: Cargo.toml
data-sources/core/src/: adaptor.rs  get_repositories_input.rs  lib.rs
data-sources/proc-macros/: Cargo.toml
data-sources/proc-macros/src/: lib.rs
data-sources/src/: lib.rs
entities/: Cargo.toml
entities/src/: as_enum.rs  dependent_fields.rs  error.rs  lib.rs
fields/: Cargo.toml
fields/src/: lib.rs
getters/: Cargo.toml
getters/src/: lib.rs
interactors/: Cargo.toml
interactors/proc-macros/: Cargo.toml
interactors/proc-macros/src/: lib.rs
interactors/src/: interactors.rs  lib.rs
repositories/: Cargo.toml
repositories/core/: Cargo.toml
repositories/core/src/: input.rs  lib.rs  repositories.rs
repositories/optional_fields/: Cargo.toml
repositories/optional_fields/src/: lib.rs
repositories/proc-macros/: Cargo.toml
repositories/proc-macros/src/: input.rs  lib.rs  load_by.rs  print.rs  repositories.rs
repositories/src/: lib.rs
src/: lib.rs
try-new/: Cargo.toml
try-new/src/: lib.rs
validated/: Cargo.toml
validated/src/: lib.rs
