[package]
name = "hex_arch"
version = "0.3.19"
authors = ["Trey Lowerison <19714082+tlowerison@users.noreply.github.com>"]
edition = "2021"

[dependencies]
common = { path = "./common", package = "hex_arch_common" }
hex_arch_accessors = { path = "./accessors", optional = true }
hex_arch_cache = { path = "./cache", optional = true }
hex_arch_data_sources = { path = "./data-sources", optional = true }
hex_arch_fields = { path = "./fields", optional = true }
hex_arch_repositories = { path = "./repositories", optional = true }
hex_arch_validated = { path = "./validated", optional = true }
indexmap = { version = "1.7.0", optional = true }
itertools = "0.10.1"
lazy_static = "1.4.0"
paste = "1.0.5"

[features]
default = []
accessors = ["hex_arch_accessors"]
cache = ["hex_arch_cache"]
data_sources = ["hex_arch_data_sources"]
fields = ["hex_arch_fields"]
repositories = ["hex_arch_repositories", "indexmap"]
validated = ["hex_arch_validated"]
