[package]
name = "hex_arch"
version = "0.3.27"
authors = ["Trey Lowerison <19714082+tlowerison@users.noreply.github.com>"]
edition = "2021"

[dependencies]
hex_arch_accessors = { path = "./accessors", optional = true }
hex_arch_cache = { path = "./cache", optional = true }
hex_arch_data_sources = { path = "./data-sources", optional = true }
hex_arch_entities = { path = "./entities", optional = true }
hex_arch_fields = { path = "./fields", optional = true }
hex_arch_interactors = { path = "./interactors", optional = true }
hex_arch_repositories = { path = "./repositories", optional = true }
hex_arch_validated = { path = "./validated", optional = true }
indexmap = { version = "1.7.0", optional = true }
itertools = "0.10.3"
lazy_static = "1.4.0"
paste = "1.0.5"

[features]
default = []
accessors = ["hex_arch_accessors"]
audit = ["hex_arch_data_sources/audit"]
cache = ["hex_arch_cache"]
data_sources = ["hex_arch_data_sources"]
diesel = ["hex_arch_data_sources/diesel", "hex_arch_entities/diesel"]
entities = ["hex_arch_entities"]
graphql = ["hex_arch_interactors/graphql"]
fields = ["hex_arch_fields"]
interactors = ["hex_arch_interactors"]
mysql = ["hex_arch_data_sources/mysql"]
postgres = ["hex_arch_data_sources/postgres"]
repositories = ["hex_arch_repositories", "indexmap"]
sqlite = ["hex_arch_data_sources/sqlite"]
validated = ["hex_arch_validated"]
