[package]
name = "hex_arch_cache"
version = "0.3.9"
authors = ["Trey Lowerison <19714082+tlowerison@users.noreply.github.com>"]
edition = "2021"
description = "In memory cache which stays synchronized across server instances -- expected use of policies is low write volume / high read volume, hence in-memory caches will be useful for each server instance. This package is meant to wrap behavior around cache functionality to keep them correctly up to date."

[dependencies]
paste = "1.0.5"
proc_macros = { path = "./proc-macros", package = "hex_arch_cache_proc_macros" }
uuid = { version = "0.8.2", features = ["v4"] }
