[package]
name = "hex_arch_data_sources"
version = "0.3.21"
authors = ["Trey Lowerison <19714082+tlowerison@users.noreply.github.com>"]
edition = "2021"

[dependencies]
common = { path = "../common", package = "hex_arch_common" }
proc_macros = { path = "./proc-macros", package = "hex_arch_data_sources_proc_macros" }
