[package]
name = "hex_arch_data_sources"
version = "0.3.23"
authors = ["Trey Lowerison <19714082+tlowerison@users.noreply.github.com>"]
edition = "2021"

[dependencies]
backends = { path = "./backends", package = "hex_arch_data_sources_backends" }
proc_macros = { path = "./proc-macros", package = "hex_arch_data_sources_proc_macros" }

[features]
default = []
audit = ["backends/audit"]
diesel = ["backends/diesel"]
mysql = ["backends/mysql"]
postgres = ["backends/postgres"]
sqlite = ["backends/sqlite"]
