[package]
name = "hex_arch_entities"
version = "0.3.22"
authors = ["Trey Lowerison <19714082+tlowerison@users.noreply.github.com>"]
edition = "2021"

[dependencies]
cfg-if = "1.0.0"
opt_diesel = { version = "1.4.8", package = "diesel", optional = true }
paste = "1.0.5"
repositories = { path = "../repositories", package = "hex_arch_repositories" }

[features]
default = []
diesel = ["opt_diesel"]
