[package]
name = "hex_arch_interactors"
version = "0.3.22"
authors = ["Trey Lowerison <19714082+tlowerison@users.noreply.github.com>"]
edition = "2021"

[dependencies]
cfg-if = "1.0.0"
convert_case = "0.4.0"
diesel = "1.4.8"
entities = { path = "../entities", package = "hex_arch_entities" }
juniper = { version = "0.15.7", optional = true }
paste = "1.0.5"
proc_macros = { path = "./proc-macros", package = "hex_arch_interactors_proc_macros" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.64"

[features]
default = []
graphql = ["juniper"]
