[package]
name = "hex_arch_repositories"
version = "0.2.3"
authors = ["Trey Lowerison <19714082+tlowerison@users.noreply.github.com>"]
edition = "2021"

[dependencies]
common = { path = "../common", package = "hex_arch_common" }
itertools = "0.10.1"
paste = "1.0.5"
proc_macros = { path = "./proc-macros", package = "hex_arch_repositories_proc_macros" }

[features]
default = []
serde = ["proc_macros/serde"]
