[package]
name = "hex_arch_data_sources_core"
version = "0.3.14"
authors = ["Trey Lowerison <19714082+tlowerison@users.noreply.github.com>"]
edition = "2021"

[dependencies]
common = { path = "../../common", package = "hex_arch_common" }
convert_case = "0.4.0"
fields = { path = "../../fields", package = "hex_arch_fields" }
itertools = "0.10.1"
lazy_static = "1.4.0"
pcre2 = "0.2.3"
proc-macro2 = "1.0.29"
repositories_core = { path = "../../repositories/core", package = "hex_arch_repositories_core" }
quote = "1.0.10"
syn = { version = "1.0.80", features = ["parsing"] }
