[package]
name = "hex_arch_data_sources_proc_macros"
version = "0.3.15"
authors = ["Trey Lowerison <19714082+tlowerison@users.noreply.github.com>"]
edition = "2021"

[dependencies]
data_sources_core = { path = "../core", package = "hex_arch_data_sources_core" }
quote = "1.0.10"
syn = { version = "1.0.80", features = ["parsing"] }

[lib]
proc-macro = true
