[package]
name = "hex_arch_interactors_proc_macros"
version = "0.3.22"
authors = ["Trey Lowerison <19714082+tlowerison@users.noreply.github.com>"]
edition = "2021"

[dependencies]
itertools = "0.10.1"
proc-macro2 = "1.0.29"
quote = "1.0.10"
syn = { version = "1.0.80", features = ["parsing"] }

[lib]
proc-macro = true
