[package]
name = "hex_arch_repositories_core"
version = "0.3.12"
authors = ["Trey Lowerison <19714082+tlowerison@users.noreply.github.com>"]
edition = "2021"

[dependencies]
convert_case = "0.4.0"
fields = { path = "../../fields", package = "hex_arch_fields" }
itertools = "0.10.1"
proc-macro2 = "1.0.29"
quote = "1.0.10"
syn = { version = "1.0.80", features = ["parsing"] }
