[package]
name = "hex_arch_repositories_proc_macros"
version = "0.1.3"
authors = ["Trey Lowerison <19714082+tlowerison@users.noreply.github.com>"]
edition = "2018"

[dependencies]
convert_case = "0.4.0"
itertools = "0.10.1"
proc-macro2 = "1.0.29"
quote = "1.0.10"
syn = { version = "1.0.80", features = ["parsing"] }

[lib]
proc-macro = true

[features]
default = []
serde = []
